# data-engineering-practice

./: .gitignore  README.md  pixi.toml  pyproject.toml
data_engineering_practice/homeworks/: homework_01.py  homework_02.py
data_engineering_practice/homeworks/homework_01/: __init__.py
data_engineering_practice/tasks/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py
data_engineering_practice/tasks/task_01/: __init__.py
data_engineering_practice/tasks/task_02/: __init__.py
data_engineering_practice/tasks/task_03/: __init__.py
data_engineering_practice/utils/: deps_version.py  logging.py
