[tool.poetry]
name = "data-engineering-practice"
version = "0.1.0"
description = "此仓库为王进老师 2025 年硕士研究生选拔办法中，任务一其一（自行练习实验任务 1 ~ 实验任务 33）的记录归档。"
authors = ["Madray Haven <sgpublic2002@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["data_engineering_practice"]


[tool.poetry.dependencies]
python = "~3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.45.1"
setuptools = "^75.8.0"
pip = "^24.3"

[tool.poetry.scripts]
task_01 = "data_engineering_practice.tasks.task_01:main"
task_02 = "data_engineering_practice.tasks.task_02:main"
task_03 = "data_engineering_practice.tasks.task_03:main"
homework_01 = "data_engineering_practice.homeworks.homework_01:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"